--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SqlConnection": "Server= 127.0.0.1; Port = 5433; Database = Quotes; User Id = postgres; Password = 45sD67ghone;"
+
+  }
 }
